# basalt

./: .bazelrc  MODULE.bazel  README.md
.github/workflows/: build_test.yml
basalt/base/: BUILD.bazel  config.h  system_info.cc  system_info.h
basalt/container/: BUILD.bazel  README.md  bitset.h  bitset_test.cc  interval_set.h  interval_set_test.cc
basalt/math/: BUILD.bazel  README.md  interval.h  interval_test.cc  math.h  math_test.cc
basalt/type_traits/: BUILD.bazel  type_traits.h
basalt/utils/: BUILD.bazel  README.md  bits.h  bits_test.cc  saturated_arithmetic.h  saturated_arithmetic_test.cc  typed_index.h  typed_index_test.cc
