# Copyright (c) 2025 Felix Kahle.
#
# Permission is hereby granted, free of charge, to any person obtaining
# a copy of this software and associated documentation files (the
# "Software"), to deal in the Software without restriction, including
# without limitation the rights to use, copy, modify, merge, publish,
# distribute, sublicense, and/or sell copies of the Software, and to
# permit persons to whom the Software is furnished to do so, subject to
# the following conditions:
#
# The above copyright notice and this permission notice shall be
# included in all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
# EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
# MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
# NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
# LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
# OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
# WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.

load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_library(
    name = "typed_index",
    hdrs = [
        "typed_index.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//basalt/base:config",
        "//basalt/type_traits",
        "@abseil-cpp//absl/hash:hash",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/strings:string_view",
    ],
)

cc_test(
    name = "typed_index_test",
    srcs = [
        "typed_index_test.cc",
    ],
    deps = [
        ":typed_index",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "bits",
    hdrs = [
        "bits.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//basalt/base:config",
        "@abseil-cpp//absl/log:check",
    ],
)

cc_test(
    name = "bits_test",
    srcs = [
        "bits_test.cc",
    ],
    deps = [
        ":bits",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "saturated_arithmetic",
    hdrs = [
        "saturated_arithmetic.h",
    ],
    deps = [
        "//basalt/base:config",
        "@abseil-cpp//absl/base:base",
        "@abseil-cpp//absl/log:check",
    ],
)

cc_test(
    name = "saturated_arithmetic_test",
    srcs = [
        "saturated_arithmetic_test.cc",
    ],
    deps = [
        ":saturated_arithmetic",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
